# worksites/views.py
@@ -138,7 +138,8 @@ class CollaboratorListView(APIView):
 
         collabs = CollabWorksites.objects.filter(
             search_filters,
-            worksite_id=worksite_id
+            worksite_id=worksite_id,
+            is_valid=True
         ).select_related('profile').distinct()
 
         profile_ids = collabs.values_list('profile__id', flat=True)
@@ -169,6 +170,39 @@ class CollaboratorListView(APIView):
 @api_view(['POST'])
 def new_collabworksite(request):
     roles = request.data.get('roles', [])
+
+    for role in roles:
+        post_data = {
+            'profile_id': request.data.get('profile', None),
+            'worksite_id': request.data.get('worksite', None),
+            'order': role.get('order'),
+            'role': role.get('role'),
+        }
+
+        post_data = {key: value for key, value in post_data.items() if value is not None}
+
+        try:
+            CollabWorksites.objects.create(**post_data)
+        except IntegrityError as e:
+            # Qui catturiamo l'IntegrityError e restituiamo un messaggio di errore personalizzato
+            return Response({'error': 'Errore di integrità dei dati. Assicurati che il profile_id e il worksite_id siano validi e esistenti.'}, status=status.HTTP_400_BAD_REQUEST)
+        except ValidationError as e:
+            return Response(str(e), status=status.HTTP_400_BAD_REQUEST)
+
+    return Response('tutto regolare', status=status.HTTP_200_OK)
+
+
+@api_view(['PUT'])
+def update_collabworksite(request):
+    profile = request.data.get('profile')
+    worksite = request.data.get('worksite')
+    roles = request.data.get('roles', [])
+
+
+    collaborators = CollabWorksites.objects.filter(worksite_id=worksite, profile_id=profile)
+
+    for collaborator in collaborators:
+        collaborator.is_valid = False
 
     for role in roles:
         post_data = {
